[project]
name = "highwaysmap"
version = "0.1.0"
description = "Map the National Highways road closures"
readme = "README.md"
authors = [
    { name = "Pierre Cazenave", email = "pwcazenave@gmail.com" }
]

requires-python = ">=3.11"

dependencies = [
    "flask[async]>=3.1.0",
    "folium>=0.19.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=7.3.0",
    "coverage>=7.2.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

test = [
    "pytest>=7.3.0",
    "pytest-flask>=1.2.0",
]

[project.scripts]
highwaysmap = "highwaysmap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

